# FlowCrafter

./: Cargo.toml  README.md
action/: action.yml
crates/codegraph-cli/: Cargo.toml
crates/codegraph-cli/src/: index.rs  main.rs  registry.rs
crates/codegraph-core/src/: lib.rs  types.rs
crates/codegraph-graph/: Cargo.toml
crates/codegraph-graph/src/: lib.rs
crates/codegraph-ingest/: Cargo.toml
crates/codegraph-ingest/src/: lib.rs
crates/codegraph-mcp/src/: lib.rs
crates/codegraph-parse/: Cargo.toml
crates/codegraph-parse/src/: lib.rs
crates/codegraph-resolve/: Cargo.toml
crates/codegraph-resolve/src/: lib.rs
crates/codegraph-store/: Cargo.toml
crates/codegraph-store/src/: lib.rs
docs/: BENCHMARK.md  RESOLUTION.md  STORAGE.md
docs/plans/: 2026-07-01-competitive-roadmap.md  2026-07-02-killer-moves.md  2026-07-02-live-bench.md
