[package]
name = "codegraph-ingest"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
codegraph-core.workspace = true
reqwest.workspace = true
html2text = "0.17.1"
pdf-extract = "0.12.0"
tesseract = { version = "0.15.2", optional = true }

[features]
media = ["dep:tesseract"]
tesseract = ["dep:tesseract"]
