[package]
name = "codegraph-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
codegraph-core.workspace = true
rusqlite.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
zstd.workspace = true
regex = "1"

[dev-dependencies]
tempfile.workspace = true
